    HAMA-19: Remove vector-norms enum to interface 
               from implementation (edwardyoon)
    HAMA-17: Vector to Writable conversion (edwardyoon)
    HAMA-15: Logo Alignment (edwardyoon) 
    HAMA-10: Refactor the mapred package 
               for the latest version of dependencies (edwardyoon)  
    HAMA-9: Upgrade dependencies (edwardyoon)

  BUG FIXES
 
    HAMA-214: Can't run the examples (edwardyoon)
    HAMA-190: Bug in Matrix-Vector multiplication (edwardyoon)
    HAMA-183: When we construct the matrix, 
                dimensions should be defined. (edwardyoon)
    HAMA-172: Vector.add(Vector v) throw the Index out of bounds 
                exception when they are different (edwardyoon)
    HAMA-169: Vector's first location bug fixed,
              getNormInf() and getNorm2Robust() are implemented (edwardyoon)
    HAMA-155: When out of index, should throw exception (edwardyoon)
    HAMA-147: Fix typos (edwardyoon)
    HAMA-140: In subMatrix(), Scanner should be closed (edwardyoon)
    HAMA-120: remove findbugs warning in shell package (samuel via edwardyoon)
    HAMA-130: Computing Block's range will miss some cell during blocking
              (samuel)
    HAMA-126: In random_mapred, (m) should be (m-1) 
                since start from 0. (edwardyoon)
    HAMA-116: ArrayIndexOutOfBoundsException at BlockingMapRed (samuel)
    HAMA-112: DenseMatrix.get(i, j) should returns zero 
                when entry is null (edwardyoon)
    HAMA-106: SubMatrix should be able to get row, column size (edwardyoon)
    HAMA-98: change '~=' operation to use `echo $f | grep 'examples$'` 
               (samuel via edwardyoon)
    HAMA-64: Bytes and Double convert (edwardyoon)
    HAMA-55: Write dimension attributes when job completed (edwardyoon)
    HAMA-54: Split doesn't split by map task num (edwardyoon)
    HAMA-53: NullPointerException on distributed cluster (edwardyoon)
    HAMA-26: hama-formatter.xml should be removed (edwardyoon)  